[package]
name = "dblp_crawler"
description = "DBLP Crawler"
version = "0.1.2"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mbs0221/dblp_crawler"

[package.metadata.deb]
maintainer = "Benshan Mei <mbs2021@163.com>"
copyright = "2023, Benshan Mei <mbs2021@163.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple subcommand for the Cargo package manager for \
building Debian packages from Rust projects."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/dblp_crawler", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/dblp_crawler/README", "644"],
]

[dependencies]
reqwest = { version = "0.11.5", features = ["blocking", "json", "serde_json", "multipart", "brotli", "gzip", "rustls", "cookies", "deflate", "socks", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
clap = "2.33.0"
cargo-deb = "1.44.0"
structopt = { version = "0.3.26", features = ["color", "doc", "yaml", "suggestions", "wrap_help"] }
